<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linearLayout1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@android:color/white">

    <TextView
        android:id="@+id/txtView"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#3F51B5"
        android:text="@string/rate_this_app"
        android:textColor="@android:color/white"
        android:padding="5dp"
        android:gravity="center"/>

    <RatingBar
        android:layout_margin="8dp"
        android:id="@+id/rating_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/edtKomentar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:hint="@string/komentar"
        android:fadeScrollbars="false"
        android:inputType="textMultiLine"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:textSize="14sp"
        android:maxLines="5"
        android:minLines="1"
        android:textColor="@android:color/black"/>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_margin="8dp"
        android:background="@android:color/white">

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/cancel"
            tools:ignore="ButtonStyle"
            android:layout_marginEnd="8dp"
            android:textColor="@android:color/white"
            android:background="#DD4E41" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="0dp"
            android:text="@string/submit"
            android:layout_height="50dp"
            android:layout_weight="1"
            tools:ignore="ButtonStyle"
            android:textColor="@android:color/white"
            android:background="#4CAF50" />

    </LinearLayout>



</LinearLayout>